manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-fe
  labels:
    app: sample-app-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app-fe
  template:
    metadata:
      labels:
        app: sample-app-fe
    spec:
      containers:
      - name: sample-app-fe
        image: docker.io/ackresponse/sample-app-fe:2.5
        ports:
        - containerPort: 3000
