manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-fe-service
  labels:
    app: sample-app-fe
spec:
  type: ClusterIP
  selector:
    app: sample-app-fe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
