manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-app-fe-gateway
  labels:
    app: sample-app-fe
spec:
  gatewayClassName: gke-l7-global-external-managed-mc  
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
