manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app-fe-route
  labels:
    app: sample-app-fe
spec:
  parentRefs:
  - name: sample-app-fe-gateway
    namespace: default
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: sample-app-fe-service
      port: 80
